--- a/css/styles.css
+++ b/css/styles.css
@@ -500,7 +500,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 
 .social-footer-link:hover,
@@ -524,6 +524,72 @@ img {
   color: var(--second-footer-logo-color);
   max-width: 264px;
 }
+
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-subscribe {
+  margin-left: 80px;
+}
+
+.footer-input {
+  width: 264px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 1.5;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  background-color: transparent;
+  color: #ffffff;
+  letter-spacing: 0.04em;
+  outline: transparent;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  transition: border-color var(--transition);
+}
+
+.footer-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  color: #ffffff;
+}
+
+/* .footer-input:focus {
+  border-color: #4d5ae5;
+} */
+
+.footer-btn {
+  min-width: 165px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  border: none;
+  padding: 8px 24px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color var(--transition);
+}
+
+/* .footer-btn:hover,
+.footer-btn:focus {
+  background: ;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+} */
+
+.footer-btn-telegram {
+  fill: #ffffff;
+  margin-left: 16px;
+}
+
+/*Modal*/
 
 .backdrop {
   position: fixed;
@@ -583,6 +649,156 @@ img {
 
 .modal-button-svg {
   transition: fill var(--transition);
+}
+
+.modal-container {
+  padding: 72px 24px 24px 24px;
+}
+
+.modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  max-width: 360px;
+  color: var(--secondary-color);
+}
+
+.modal-name {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-item {
+  margin-bottom: 8px;
+}
+
+.modal-box {
+  position: relative;
+}
+
+.username-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill var(--transition);
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  display: block;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  margin-bottom: 8px;
+  outline: transparent;
+  transition: border-color var(--transition);
+}
+
+.modal-input:focus-within {
+  border-color: #4d5ae5;
+}
+
+.modal-input:focus-within + .username-icon {
+  fill: #4d5ae5;
+}
+
+.textarea-box {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  margin-bottom: 16px;
+}
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  resize: none;
+  transition: border-color var(--transition);
+}
+.modal-textarea:focus-within {
+  border-color: #4d5ae5;
+}
+.modal-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.checkbox-box {
+  margin-bottom: 24px;
+}
+
+.privacy-checkbox:checked + .privacy-label > .checkbox-box-svg {
+  background-color: #404bbf;
+  border: none;
+  fill: var(--accent-background-color);
+}
+
+.privacy-link {
+  color: #4d5ae5;
+  text-decoration: underline;
+  display: inline-block;
+  margin-left: 3px;
+}
+
+.checkbox-box-svg {
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color var(--transition), border var(--transition),
+    fill var(--transition);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.privacy-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+}
+
+.modal-btn {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  margin-left: 94px;
+  background-color: #4d5ae5;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  line-height: 1.5;
+  cursor: pointer;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  transition: background-color var(--transition);
 }
 
 /* Portfolio */
